--- a/packages/some-es6-package/package.json
+++ b/packages/some-es6-package/package.json
@@ -2,10 +2,12 @@
   "name": "some-es6-package",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "exports": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
