--- a/packages/nextjs-with-express/package.json
+++ b/packages/nextjs-with-express/package.json
@@ -10,11 +10,11 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "some-es6-package": "1",
     "express": "^4.16.4",
     "next": "latest",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "some-es6-package": "1"
   },
   "devDependencies": {
     "esm": "^3.0.84"
