--- a/packages/nextjs-with-express/package.json
+++ b/packages/nextjs-with-express/package.json
@@ -5,9 +5,9 @@
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "scripts": {
-    "dev": "node server.mjs",
+    "dev": "node src/server.mjs",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node src/server.mjs"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -17,6 +17,7 @@
     "some-es6-package": "1"
   },
   "devDependencies": {
-    "esm": "^3.0.84"
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.0"
   }
 }
