--- a/packages/nextjs-with-express/package.json
+++ b/packages/nextjs-with-express/package.json
@@ -1,6 +1,7 @@
 {
   "name": "custom-server-express",
   "version": "1.0.0",
+  "license": "ISC",
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
@@ -17,7 +18,9 @@
     "some-es6-package": "1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.11",
     "eslint": "^7.29.0",
-    "eslint-config-next": "^11.0.0"
+    "eslint-config-next": "^11.0.0",
+    "typescript": "^4.3.4"
   }
 }
