--- a/packages/some-es6-package/package.json
+++ b/packages/some-es6-package/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "exports": "./src/index.js",
+  "exports": "./dist/index.js",
+  "types": "dist/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "tsc"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^4.3.4"
+  }
 }
