--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-server-express",
+  "name": "@example/nextjs-app",
   "version": "1.0.0",
   "license": "ISC",
   "engines": {
@@ -11,11 +11,11 @@
     "start": "NODE_ENV=production node server.mjs"
   },
   "dependencies": {
+    "@example/shared-es-module": "1",
     "express": "^4.16.4",
-    "next": "latest",
-    "react": "^17.0.2",
+    "next": "^11.0.0",
     "react-dom": "^17.0.2",
-    "some-es6-package": "1"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
