--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,7 @@
     "strict": true,
     "esModuleInterop": true,
     "composite": true,
-    "incremental": true,
+    // "incremental": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "skipLibCheck": true,
