--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,19 +6,10 @@
     "strict": true,
     "esModuleInterop": true,
     "composite": true,
-    // "incremental": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["**/node_modules"],
-  "references": [
-    {
-      "path": "./packages/shared-es-module"
-    },
-    {
-      "path": "./packages/nextjs-app"
-    }
-  ]
+  "exclude": ["**/node_modules"]
 }
